src/components/all.sass
@import "~bulma/sass/utilities/initial-variables"

// Config vars
$kaldi-red: #FD461E
$kaldi-red-invert: #fff

$primary: $kaldi-red
$primary-invert: $kaldi-red-invert

.img
  margin-bottom: 0

.floating-wrapper
  text-align: center
  margin-left: auto
  margin-right: auto
  font-family: 'Exo',sans-serif
  background: rgb(255,255,255)
  position: relative
  display: block
  top: -120px
  max-width: 80%
  box-shadow: 0 0 6px rgba(0,0,0,.16), 0 6px 12px rgba(0,0,0,.32)
  padding: 20px
.floating-box
  text-align: center

.content .taglist
  list-style: none
  margin-bottom: 0
  margin-left: 0
  margin-right: 1.5rem
  margin-top: 1.5rem
  display: flex
  flex-wrap: wrap
  justify-content: left
  align-items: center
  li
    padding: 0 2rem 1rem 0
    margin-bottom: 1.5rem
    margin-top: 0

// Helper Classes
.full-width-image-container
  width: 100vw
  height: 400px
  position: relative
  left: 50%
  right: 50%
  margin: 5em -50vw
  background-size: cover
  background-position: bottom
  display: flex
  justify-content: center
  align-items: center

/* Centered text */
.centered-on-image
    position: absolute
    top: 50%
    left: 50%
    transform: translate(-50%, -50%)
    text-align: center


.margin-top-0
  margin-top: 0 !important

@import "~bulma"

.section
  padding-top: 0

.g-recaptcha 
  display: inline-block

